--- a/first.html
+++ b/first.html
@@ -32,10 +32,10 @@
   <p align="center"> I am going to write something really useless. Its so useless MEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMES.</p>
 <p align="center"> I am going to write something really useless. Its so useless MEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMEMES.</p>
 <img height="450" width="450" src="images/milk.gif" alt="projectile milk">
-<img src="images/dank.gif" alt="bernymac is god.gif">
+<img height="450" width="450" src="images/dank.gif" alt="berny mac is god.gif">
+<img height="450" width="450" src="images/giphy.gif" alt="infinite patricks.gif">
 
-
-
+<p>I want to link to the school site. <a href="http://www.davenportschools.org/west">HERE!</a></p>
 
 
 
